chore: add users to sites relationship, return sites for the current logged in user.
